# qaa

./: .cookiecutter.json  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  quick_start.rst  reference.rst  requirements.txt  usage.rst
docs/api/: qaa.commands.cmd_cluster.find_closest_point.rst  qaa.decomposition.jade.JadeICA.rst  qaa.libs.align.align_trajectory.rst  qaa.libs.figure.Figure.rst  qaa.libs.kabsch.Kabsch.rst  qaa.libs.utils.get_average_structure.rst  qaa.libs.utils.get_positions.rst  qaa.libs.utils.reshape_positions.rst  qaa.libs.utils.rmse.rst
notebooks/: align.ipynb  cluster.ipynb  ica.ipynb  pca.ipynb  qaa.ipynb  tutorial.ipynb
notebooks/data/: protein.parm7
src/qaa/: __init__.py  __main__.py  cli.py  config.yaml
src/qaa/commands/: __init__.py  cmd_align.py  cmd_cluster.py  cmd_extract.py  cmd_pca.py  cmd_plot.py  cmd_qaa.py  cmd_reduce.py
src/qaa/decomposition/: __init__.py  jade.py
src/qaa/libs/: __init__.py  align.py  average.py  configparser.py  figure.py  kabsch.py  trajectory.py  typing.py  utils.py
tests/: __init__.py  datafile.py  test_main.py
tests/commands/: __init__.py  test_align.py  test_cluster.py  test_extract.py  test_jade.py  test_pca.py  test_plot.py  test_qaa.py  test_reduce.py
tests/data/: config-bad.yaml  config-dihedrals.yaml  config-trajfiles.yaml  config-trajform.yaml  pca-centroids.csv  pca-centroids.npy  pca-cluster.csv  pca-cluster.npy  pca-labels.npy  projection.csv  projection.npy  protein.nc  protein.parm7  rnase2_nowat.parm7
tests/decomposition/: __init__.py  test_jade.py
tests/libs/: __init__.py  test_align.py  test_configparser.py  test_figure.py  test_kabsch.py  test_trajectory.py  test_utils.py
