[tool.poetry]
name = "qaa"
version = "3.0.0-rc2"
description = "Quasi-Anharmonic Analysis"
authors = ["Timothy H. Click <tclick@okstate.edu>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/tclick/qaa"
repository = "https://github.com/tclick/qaa"
documentation = "https://pyqaa.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/tclick/qaa/releases"

[tool.poetry.dependencies]
python = "^3.7, !=3.8, <4.0"
click = "^7.0"
holoviews = { extras = ["recommended"], version = "^1.14.3" }
mdtraj = "^1.9"
nptyping = "^1.4"
scikit-learn = "^0.24"

# Optional installs for usage with notebooks
jupyter = { version = "^1.0.0", optional = true }
jupyterlab = { version = "^3.0.13", optional = true }
jupyterlab-code-formatter = { version = "^1.4.10", optional = true }
jupyterlab-mathjax3 = { version = "^4.2.2", optional = true }
nglview = { version = "^3.0.0", optional = true }
ipykernel = { version = "^5.5.3", optional = true }
plotly = { version = "^4.14.3", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cache = "^1.0"
pytest-console-scripts = "^1.1"
pytest-cov = "^2.11"
pytest-flake8 = "^1.0"
pytest-pep8 = "^1.0"
pytest-mypy = "^0.8"
pytest-random-order = "^1.0"
coverage = { extras = ["toml"], version = "^5.4" }
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.11.1"
xdoctest = { extras = ["colors"], version = "^0.15.4" }
sphinx = "^3.5"
sphinx-autobuild = "^2021"
sphinx-rtd-theme = "^0.5"
sphinx-click = "^2.7"
pre-commit = "^2.11.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
flake8-black = "^0.2"
flake8-import-order = "^0.18"
pep8-naming = "^0.11.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.4.0"
Pygments = "^2.8.1"
ipython = "^7.21"
towncrier = "^21"
nox = "^2020.12"
nox-poetry = "^0.8"
numpydoc = "^1.1"
codecov = "^2.1"
sphinx-automodapi = "^0.13"
importlib-metadata = { version = "ˆ4.0", python = "3.7" }

[tool.poetry.extras]
jupyter = ["jupyter", "jupyterlab", "jupyterlab-code-formatter",
    "jupyterlab-mathjax3", "nglview", "ipykernal", "plotly"]

[tool.poetry.scripts]
qaa = "qaa.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["qaa"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=52.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
package = "qaa"
package_dir = "src"
filename = "docs/changelog.rst"
directory = "docs/changelog"
template = "docs/changelog/template.jinja2"
title_format = "v{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/tox-dev/tox/issues/{issue}>`_"
underlines = ["-", "^"]

[[tool.towncrier.section]]
path = ""

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations (removal in next major release)"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Backward incompatible changes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
